<resources>
    <string name="app_name">Lemonor</string>
    <string name="register">Register</string>
    <string name="select_your_mail_id">Select Your Mail ID</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username_taken">Username taken!!</string>
    <string name="loading">Loading...</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="bookmark">Bookmark</string>
    <string name="support">Support</string>
    <string name="area">Area</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="url">URL</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="submit">Submit</string>
    <string name="requisites">Requisites :</string>
    <string name="comments">Comments :</string>
    <string name="comment">Comments</string>
    <string name="view_more">View More</string>
    <string name="ask_me_later">Ask Me Later</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="web_link">Web Link</string>
    <string name="media_content">Media Content</string>
    <string name="update">Update</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="ok">OK</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="may_be_true">May be True</string>
    <string name="unmoderated">Unmoderated</string>
    <string name="may_be_fake">May be Fake</string>
    <string name="moderated">Moderated</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="country">Country</string>
    <string name="symptoms">Symptoms</string>
    <string name="requirements">Requirements</string>
    <string name="mobile_no">Mobile No</string>
    <string name="alternative_mobile_no">Alternative Mobile No</string>
    <string name="my_page">My Page</string>
    <string name="map">Map</string>
    <string name="care">Care</string>
    <string name="tracker">Tracker</string>
    <string name="my_posts">My Posts</string>
    <string name="help_line_support">Help Line / Support</string>
    <string name="precaution">Precaution</string>
    <string name="general_tips">General Tips</string>
    <string name="recovery">Recovery</string>
    <string name="all">All</string>
    <string name="world">World</string>
    <string name="india">India</string>
    <string name="who">Who</string>
    <string name="worldometer">Worldometer</string>
    <string name="global">Global</string>
    <string name="here_maps">Here Maps</string>
    <string name="bing">Bing</string>
    <string name="google">Google</string>
    <string name="consumer">Consumer</string>
    <string name="supplier">Supplier</string>
    <string name="i_m_delivering">I\'m Delivering</string>
    <string name="supplier_registration">Supplier Registration</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="select_state">Select State</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="mark_shop_location">Mark Shop Location</string>
    <string name="save">Save</string>
    <string name="title_activity_shop_marker_map">Map</string>
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="unit_eg_1_kg_1_packet">Unit Eg: 1 KG / 1 Packet</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_product">Add Product</string>
    <string name="select_product">Select Product</string>
    <string name="unit">Unit</string>
    <string name="product_added">Product Added</string>
    <string name="enable_supplier_content">You are
        Enabling as a Supplier. Please enter your Shop Details and Available Products
    </string>
    <string name="cancel">Cancel</string>
    <string name="add_new_product">Add New Product</string>
    <string name="alias_name">Alias Name (Optional)</string>
    <string name="other_language_name">Other Language Name</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="slash">/</string>
    <string name="supplier_enrollment">Supplier Enrollment</string>
    <string name="supplier_edit">Supplier Edit</string>
    <string name="edit_supplier_profile">Edit Supplier Profile</string>
    <string name="edit_supplier_product">Edit Supplier Product</string>
    <string name="update_product">Update Product</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_product">Edit Product</string>
    <string name="shop_location_marked">Shop Location Marked</string>
    <string name="place_order">Place Order</string>
    <string name="order">Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="lemonor">Lemonor</string>
    <string name="safe_home_delivery">Safe Home Delivery</string>
    <string name="select_your_email_id">Select Your Mail ID</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="view_products">View Products</string>
    <string name="qty">Qty</string>
    <string name="products">Products</string>
    <string name="my_orders">My Orders</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="orders">Orders</string>
    <string name="Rs">\u20B9</string>
    <string name="make_call">Make Call</string>
    <string name="supplier_disenrollment">Supplier Disenrollment</string>
    <string name="disenroll_supplier_content">You are Disenrolling From Supplier</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="please_enable_your_self_as_a_seller_to_receive_orders">Please Enable Yourself as a Seller to Receive
        Orders
    </string>
    <string name="live_orders">Live Orders</string>
    <string name="no_orders_for_now">No orders for now!</string>
    <string name="select_category">Select Category</string>
    <string name="custom_category">Custom Category</string>
    <string name="select_unit">Select Unit</string>
    <string name="custom_unit">Custom Unit</string>
    <string name="remove_product">Remove Product</string>
    <string name="remove_product_string">You are Removing the Product from Your List!</string>
    <string name="stock_available">You are About to Show that the Product is Available or In Stock</string>
    <string name="stock_unavailable">You are About to Show that the Product is Unavailable or Out of Stock</string>
    <string name="no_shops">Sorry, No Shops Available in Your Area.</string>
    <string name="language_name_optional">Language Name (Optional)</string>
    <string name="no_orders">No Orders!</string>
    <string name="distance">Distance :</string>
    <string name="kms">Kms</string>
    <string name="view_edit_products">View / Edit Products</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="total">Total</string>
    <string name="kg">Kg</string>
    <string name="quick_price_update">Quick Price Update</string>
    <string name="order_history">Order History</string>
    <string name="edit_seller_profile_amp_location"><![CDATA[Edit Seller Profile & Location]]></string>
    <string name="my_profile">My Profile</string>
    <string name="global_data">Global Data</string>
    <string name="about_us">About Us</string>
    <string name="suggestion_feedback">Suggestions / Feedback</string>
    <string name="help_desk">Help Desk</string>
    <string name="shop_closing">Shop Closing</string>
    <string name="do_you_want_to_show_that_the_shop_is_closed_now">Do you want to show that the shop is closed now?
    </string>
    <string name="supplier_enable_txt">Welcome to Seller\'s Area! You just need to enable the button on the top right
        corner to become a Seller.
    </string>
    <string name="seller_content_1">Welcome to Seller\'s Marketplace!</string>
    <string name="seller_content_2">You just need to enable the button on the</string>
    <string name="seller_content_3">top right corner to become a Seller</string>
    <string name="_1">1</string>
    <string name="enable_as_a_seller">Enable as a Seller</string>
    <string name="_2">2</string>
    <string name="enter_shop_details">Enter Shop Details</string>
    <string name="_3">3</string>
    <string name="list_products_and_update_price">List Products and update price</string>
    <string name="viola_you_are_done_and_wait_for_the_orders">Viola! You are done and Wait for the Orders !!</string>
    <string name="waiting_for_new_orders">Waiting for new Orders...</string>
    <string name="seller_enrollment">Seller Enrollment</string>
    <string name="you_are_going_to_enable_yourself_as_a_seller_now">You are going to enable yourself as a Seller now.
    </string>
    <string name="shop_opening">Shop Opening</string>
    <string name="welcome_back_can_we_open_the_shop_now">Welcome Back! Can we open the shop now?</string>
    <string name="seems_you_haven_t_added_any_products_yet">Seems you haven\'t added any Products yet!</string>
    <string name="please_add_one_or_more_products_to_view_the_list">Please add one or more products to view the List.
    </string>
    <string name="add_products">Add Products</string>
    <string name="cancelled">Cancelled</string>
    <string name="accept">Accept</string>
    <string name="order_completed">Order Completed</string>
    <string name="complete_all">Complete All</string>
    <string name="accept_all">Accept All</string>
    <string name="reject_all">Reject All</string>
    <string name="default_notification_channel_id">my_channel_01</string>
    <string name="app_close_txt">Do you want to leave the app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="seller_registration">Seller Registration</string>
    <string name="items">Items</string>
    <string name="orders_history">Orders History</string>
    <string name="open_order">Open Order (Just type your order here)</string>
    <string name="x">x</string>
    <string name="Rs_string">Rs.</string>
    <string name="please_enter_the_open_order_bill_amount_for">Please enter the Open Order Bill Amount for</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="rate">Rate</string>
    <string name="open">Open</string>
    <string name="allow">Allow</string>
    <string name="seller_rejected">Seller Rejected</string>
    <string name="please_update_the_newer_version">Please update the newer version.</string>
    <string name="featured">Featured</string>
    <string name="rate_us">Rate Us</string>
    <string name="store_rating">Store Rating</string>
    <string name="product_rating">Product Rating</string>
    <string name="delivery_boy_rating">Delivery Boy Rating</string>
    <string name="payments">Payments</string>
    <string name="cash_on_delivery">Cash On Delivery (COD)</string>
    <string name="proceed">Proceed</string>
    <string name="quick_upi">Quick UPI</string>
    <string name="net_banking_credit_card_amp_more"><![CDATA[Net Banking, Credit Card & more]]></string>
</resources>