<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_10"
        app:cardCornerRadius="@dimen/pad_10">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <in.inferon.msl.lemonor.view.ui.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:padding="@dimen/pad_10"/>

        <in.inferon.msl.lemonor.view.ui.LightEditText
                android:id="@+id/productNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/black"
                android:hint="@string/product_name"
                android:textColorHint="@color/gray"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:background="@drawable/main_edit_tx_bg"
                android:padding="@dimen/pad_10"
                android:layout_margin="@dimen/pad_10"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/pad_10">
            <in.inferon.msl.lemonor.view.ui.LightEditText
                    android:id="@+id/aliasNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/black"
                    android:hint="@string/language_name_optional"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/main_edit_tx_bg"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/pad_10"
                    android:layout_marginRight="@dimen/pad_5"
                    android:layout_marginEnd="@dimen/pad_5"
                    android:layout_weight="1"/>

            <in.inferon.msl.lemonor.view.ui.LightTextView
                    android:id="@+id/categoryTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/black"
                    android:hint="@string/category"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/main_edit_tx_bg"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/pad_10"
                    android:layout_marginLeft="@dimen/pad_5"
                    android:layout_marginStart="@dimen/pad_5"
                    android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/pad_10">
            <in.inferon.msl.lemonor.view.ui.LightTextView
                    android:id="@+id/unitTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/black"
                    android:hint="@string/unit"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/main_edit_tx_bg"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/pad_10"
                    android:layout_marginRight="@dimen/pad_5"
                    android:layout_marginEnd="@dimen/pad_5"
                    android:layout_weight="1"/>

            <in.inferon.msl.lemonor.view.ui.LightEditText
                    android:id="@+id/priceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/black"
                    android:hint="@string/price"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/main_edit_tx_bg"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/pad_10"
                    android:layout_marginLeft="@dimen/pad_5"
                    android:layout_marginStart="@dimen/pad_5"
                    android:layout_weight="1"/>
        </LinearLayout>

        <in.inferon.msl.lemonor.view.ui.LightEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/black"
                android:hint="@string/description"
                android:textColorHint="@color/gray"
                android:background="@drawable/main_edit_tx_bg"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:padding="@dimen/pad_10"
                android:layout_margin="@dimen/pad_10"/>

        <in.inferon.msl.lemonor.view.ui.CheckBox
                android:id="@+id/featuredProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/featured"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/fontColor"
                android:padding="@dimen/pad_10"
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"/>

        <in.inferon.msl.lemonor.view.ui.BoldTextView
                android:id="@+id/addTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:padding="@dimen/pad_10"
                android:gravity="center"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>