<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.activity.ForceUpdateActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
            <ImageView
                    android:layout_width="@dimen/pad_60"
                    android:layout_height="@dimen/pad_60"
                    android:src="@drawable/logoplain"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"/>

            <in.inferon.msl.lemonor.view.ui.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemonor"
                    android:textSize="@dimen/text_42sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"/>

            <in.inferon.msl.lemonor.view.ui.LightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safe_home_delivery"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="end"
                    android:layout_marginRight="@dimen/pad_5"
                    android:layout_marginEnd="@dimen/pad_5"/>
        </LinearLayout>

        <in.inferon.msl.lemonor.view.ui.LightTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_update_the_newer_version"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/fontColor"
                android:gravity="center"
                android:layout_marginTop="@dimen/pad_30"/>

        <in.inferon.msl.lemonor.view.ui.LightButton
                android:id="@+id/updateBT"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/button_bg"
                android:paddingLeft="@dimen/pad_30"
                android:paddingRight="@dimen/pad_30"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_20"/>
    </LinearLayout>
</RelativeLayout>