<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_margin="@dimen/pad_10"
        app:cardCornerRadius="@dimen/pad_10">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <in.inferon.msl.lemonor.view.ui.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/payments"
                android:textSize="@dimen/text_18sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:gravity="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/pad_10">

            <RadioGroup
                    android:id="@+id/paymentRG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pad_20">
                <in.inferon.msl.lemonor.view.ui.LightRadioButton
                        android:id="@+id/upiRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quick_upi"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/fontColor"
                        android:checked="true"/>

                <in.inferon.msl.lemonor.view.ui.LightRadioButton
                        android:id="@+id/netBankingRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/net_banking_credit_card_amp_more"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/fontColor"
                        android:layout_marginTop="@dimen/pad_10"/>

                <in.inferon.msl.lemonor.view.ui.LightRadioButton
                        android:id="@+id/cashOnDeliveryRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_on_delivery"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/fontColor"
                        android:layout_marginTop="@dimen/pad_10"/>
            </RadioGroup>

            <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/pad_20">
                <in.inferon.msl.lemonor.view.ui.LightButton
                        android:id="@+id/cancelBT"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pad_40"
                        android:text="@string/cancel"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/main_cancel_bt_color"
                        android:background="@drawable/main_cancel_bt_bg"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/pad_5"
                        android:layout_marginEnd="@dimen/pad_5"/>

                <in.inferon.msl.lemonor.view.ui.LightButton
                        android:id="@+id/proceedBT"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pad_40"
                        android:text="@string/proceed"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/white"
                        android:background="@drawable/button_bg"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/pad_5"
                        android:layout_marginStart="@dimen/pad_5"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/loadingLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_margin="@dimen/pad_20">
                <ProgressBar
                        android:layout_width="@dimen/pad_10"
                        android:layout_height="@dimen/pad_10"/>
                <in.inferon.msl.lemonor.view.ui.LightTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="@dimen/text_12sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="@dimen/pad_10"
                        android:layout_marginStart="@dimen/pad_10"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>